bx/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     expr -> IDENT
Rule 2     expr -> NUMBER
Rule 3     expr -> DASH expr
Rule 4     expr -> TILD expr
Rule 5     expr -> expr PLUS expr
Rule 6     expr -> expr DASH expr
Rule 7     expr -> expr STAR expr
Rule 8     expr -> expr SLASH expr
Rule 9     expr -> expr PCENT expr
Rule 10    expr -> expr AMP expr
Rule 11    expr -> expr PIPE expr
Rule 12    expr -> expr HAT expr
Rule 13    expr -> expr LTLT expr
Rule 14    expr -> expr GTGT expr
Rule 15    expr -> LPAREN expr RPAREN
Rule 16    stmt -> VAR IDENT EQ expr COLON INT SEMICOLON
Rule 17    stmt -> IDENT EQ expr SEMICOLON
Rule 18    stmt -> PRINT LPAREN expr RPAREN SEMICOLON
Rule 19    stmts -> <empty>
Rule 20    stmts -> stmts stmt
Rule 21    program -> DEF MAIN LPAREN RPAREN LBRACE stmts RBRACE

Terminals, with rules where they appear

AMP                  : 10
COLON                : 16
DASH                 : 3 6
DEF                  : 21
EQ                   : 16 17
GTGT                 : 14
HAT                  : 12
IDENT                : 1 16 17
INT                  : 16
LBRACE               : 21
LPAREN               : 15 18 21
LTLT                 : 13
MAIN                 : 21
NUMBER               : 2
PCENT                : 9
PIPE                 : 11
PLUS                 : 5
PRINT                : 18
RBRACE               : 21
RPAREN               : 15 18 21
SEMICOLON            : 16 17 18
SLASH                : 8
STAR                 : 7
TILD                 : 4
VAR                  : 16
error                : 

Nonterminals, with rules where they appear

expr                 : 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 16 17 18
program              : 0
stmt                 : 20
stmts                : 20 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (21) program -> . DEF MAIN LPAREN RPAREN LBRACE stmts RBRACE

    DEF             shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (21) program -> DEF . MAIN LPAREN RPAREN LBRACE stmts RBRACE

    MAIN            shift and go to state 3


state 3

    (21) program -> DEF MAIN . LPAREN RPAREN LBRACE stmts RBRACE

    LPAREN          shift and go to state 4


state 4

    (21) program -> DEF MAIN LPAREN . RPAREN LBRACE stmts RBRACE

    RPAREN          shift and go to state 5


state 5

    (21) program -> DEF MAIN LPAREN RPAREN . LBRACE stmts RBRACE

    LBRACE          shift and go to state 6


state 6

    (21) program -> DEF MAIN LPAREN RPAREN LBRACE . stmts RBRACE
    (19) stmts -> .
    (20) stmts -> . stmts stmt

    RBRACE          reduce using rule 19 (stmts -> .)
    VAR             reduce using rule 19 (stmts -> .)
    IDENT           reduce using rule 19 (stmts -> .)
    PRINT           reduce using rule 19 (stmts -> .)

    stmts                          shift and go to state 7

state 7

    (21) program -> DEF MAIN LPAREN RPAREN LBRACE stmts . RBRACE
    (20) stmts -> stmts . stmt
    (16) stmt -> . VAR IDENT EQ expr COLON INT SEMICOLON
    (17) stmt -> . IDENT EQ expr SEMICOLON
    (18) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON

    RBRACE          shift and go to state 8
    VAR             shift and go to state 10
    IDENT           shift and go to state 11
    PRINT           shift and go to state 12

    stmt                           shift and go to state 9

state 8

    (21) program -> DEF MAIN LPAREN RPAREN LBRACE stmts RBRACE .

    $end            reduce using rule 21 (program -> DEF MAIN LPAREN RPAREN LBRACE stmts RBRACE .)


state 9

    (20) stmts -> stmts stmt .

    RBRACE          reduce using rule 20 (stmts -> stmts stmt .)
    VAR             reduce using rule 20 (stmts -> stmts stmt .)
    IDENT           reduce using rule 20 (stmts -> stmts stmt .)
    PRINT           reduce using rule 20 (stmts -> stmts stmt .)


state 10

    (16) stmt -> VAR . IDENT EQ expr COLON INT SEMICOLON

    IDENT           shift and go to state 13


state 11

    (17) stmt -> IDENT . EQ expr SEMICOLON

    EQ              shift and go to state 14


state 12

    (18) stmt -> PRINT . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 15


state 13

    (16) stmt -> VAR IDENT . EQ expr COLON INT SEMICOLON

    EQ              shift and go to state 16


state 14

    (17) stmt -> IDENT EQ . expr SEMICOLON
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 18

state 15

    (18) stmt -> PRINT LPAREN . expr RPAREN SEMICOLON
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 23

state 16

    (16) stmt -> VAR IDENT EQ . expr COLON INT SEMICOLON
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 24

state 17

    (1) expr -> IDENT .

    SEMICOLON       reduce using rule 1 (expr -> IDENT .)
    PLUS            reduce using rule 1 (expr -> IDENT .)
    DASH            reduce using rule 1 (expr -> IDENT .)
    STAR            reduce using rule 1 (expr -> IDENT .)
    SLASH           reduce using rule 1 (expr -> IDENT .)
    PCENT           reduce using rule 1 (expr -> IDENT .)
    AMP             reduce using rule 1 (expr -> IDENT .)
    PIPE            reduce using rule 1 (expr -> IDENT .)
    HAT             reduce using rule 1 (expr -> IDENT .)
    LTLT            reduce using rule 1 (expr -> IDENT .)
    GTGT            reduce using rule 1 (expr -> IDENT .)
    RPAREN          reduce using rule 1 (expr -> IDENT .)
    COLON           reduce using rule 1 (expr -> IDENT .)


state 18

    (17) stmt -> IDENT EQ expr . SEMICOLON
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr

    SEMICOLON       shift and go to state 25
    PLUS            shift and go to state 26
    DASH            shift and go to state 27
    STAR            shift and go to state 28
    SLASH           shift and go to state 29
    PCENT           shift and go to state 30
    AMP             shift and go to state 31
    PIPE            shift and go to state 32
    HAT             shift and go to state 33
    LTLT            shift and go to state 34
    GTGT            shift and go to state 35


state 19

    (2) expr -> NUMBER .

    SEMICOLON       reduce using rule 2 (expr -> NUMBER .)
    PLUS            reduce using rule 2 (expr -> NUMBER .)
    DASH            reduce using rule 2 (expr -> NUMBER .)
    STAR            reduce using rule 2 (expr -> NUMBER .)
    SLASH           reduce using rule 2 (expr -> NUMBER .)
    PCENT           reduce using rule 2 (expr -> NUMBER .)
    AMP             reduce using rule 2 (expr -> NUMBER .)
    PIPE            reduce using rule 2 (expr -> NUMBER .)
    HAT             reduce using rule 2 (expr -> NUMBER .)
    LTLT            reduce using rule 2 (expr -> NUMBER .)
    GTGT            reduce using rule 2 (expr -> NUMBER .)
    RPAREN          reduce using rule 2 (expr -> NUMBER .)
    COLON           reduce using rule 2 (expr -> NUMBER .)


state 20

    (3) expr -> DASH . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 36

state 21

    (4) expr -> TILD . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 37

state 22

    (15) expr -> LPAREN . expr RPAREN
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 38

state 23

    (18) stmt -> PRINT LPAREN expr . RPAREN SEMICOLON
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 26
    DASH            shift and go to state 27
    STAR            shift and go to state 28
    SLASH           shift and go to state 29
    PCENT           shift and go to state 30
    AMP             shift and go to state 31
    PIPE            shift and go to state 32
    HAT             shift and go to state 33
    LTLT            shift and go to state 34
    GTGT            shift and go to state 35


state 24

    (16) stmt -> VAR IDENT EQ expr . COLON INT SEMICOLON
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr

    COLON           shift and go to state 40
    PLUS            shift and go to state 26
    DASH            shift and go to state 27
    STAR            shift and go to state 28
    SLASH           shift and go to state 29
    PCENT           shift and go to state 30
    AMP             shift and go to state 31
    PIPE            shift and go to state 32
    HAT             shift and go to state 33
    LTLT            shift and go to state 34
    GTGT            shift and go to state 35


state 25

    (17) stmt -> IDENT EQ expr SEMICOLON .

    RBRACE          reduce using rule 17 (stmt -> IDENT EQ expr SEMICOLON .)
    VAR             reduce using rule 17 (stmt -> IDENT EQ expr SEMICOLON .)
    IDENT           reduce using rule 17 (stmt -> IDENT EQ expr SEMICOLON .)
    PRINT           reduce using rule 17 (stmt -> IDENT EQ expr SEMICOLON .)


state 26

    (5) expr -> expr PLUS . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 41

state 27

    (6) expr -> expr DASH . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 42

state 28

    (7) expr -> expr STAR . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 43

state 29

    (8) expr -> expr SLASH . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 44

state 30

    (9) expr -> expr PCENT . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 45

state 31

    (10) expr -> expr AMP . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 46

state 32

    (11) expr -> expr PIPE . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 47

state 33

    (12) expr -> expr HAT . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 48

state 34

    (13) expr -> expr LTLT . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 49

state 35

    (14) expr -> expr GTGT . expr
    (1) expr -> . IDENT
    (2) expr -> . NUMBER
    (3) expr -> . DASH expr
    (4) expr -> . TILD expr
    (5) expr -> . expr PLUS expr
    (6) expr -> . expr DASH expr
    (7) expr -> . expr STAR expr
    (8) expr -> . expr SLASH expr
    (9) expr -> . expr PCENT expr
    (10) expr -> . expr AMP expr
    (11) expr -> . expr PIPE expr
    (12) expr -> . expr HAT expr
    (13) expr -> . expr LTLT expr
    (14) expr -> . expr GTGT expr
    (15) expr -> . LPAREN expr RPAREN

    IDENT           shift and go to state 17
    NUMBER          shift and go to state 19
    DASH            shift and go to state 20
    TILD            shift and go to state 21
    LPAREN          shift and go to state 22

    expr                           shift and go to state 50

state 36

    (3) expr -> DASH expr .
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr

    SEMICOLON       reduce using rule 3 (expr -> DASH expr .)
    PLUS            reduce using rule 3 (expr -> DASH expr .)
    DASH            reduce using rule 3 (expr -> DASH expr .)
    STAR            reduce using rule 3 (expr -> DASH expr .)
    SLASH           reduce using rule 3 (expr -> DASH expr .)
    PCENT           reduce using rule 3 (expr -> DASH expr .)
    AMP             reduce using rule 3 (expr -> DASH expr .)
    PIPE            reduce using rule 3 (expr -> DASH expr .)
    HAT             reduce using rule 3 (expr -> DASH expr .)
    LTLT            reduce using rule 3 (expr -> DASH expr .)
    GTGT            reduce using rule 3 (expr -> DASH expr .)
    RPAREN          reduce using rule 3 (expr -> DASH expr .)
    COLON           reduce using rule 3 (expr -> DASH expr .)

  ! PLUS            [ shift and go to state 26 ]
  ! DASH            [ shift and go to state 27 ]
  ! STAR            [ shift and go to state 28 ]
  ! SLASH           [ shift and go to state 29 ]
  ! PCENT           [ shift and go to state 30 ]
  ! AMP             [ shift and go to state 31 ]
  ! PIPE            [ shift and go to state 32 ]
  ! HAT             [ shift and go to state 33 ]
  ! LTLT            [ shift and go to state 34 ]
  ! GTGT            [ shift and go to state 35 ]


state 37

    (4) expr -> TILD expr .
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr

    SEMICOLON       reduce using rule 4 (expr -> TILD expr .)
    PLUS            reduce using rule 4 (expr -> TILD expr .)
    DASH            reduce using rule 4 (expr -> TILD expr .)
    STAR            reduce using rule 4 (expr -> TILD expr .)
    SLASH           reduce using rule 4 (expr -> TILD expr .)
    PCENT           reduce using rule 4 (expr -> TILD expr .)
    AMP             reduce using rule 4 (expr -> TILD expr .)
    PIPE            reduce using rule 4 (expr -> TILD expr .)
    HAT             reduce using rule 4 (expr -> TILD expr .)
    LTLT            reduce using rule 4 (expr -> TILD expr .)
    GTGT            reduce using rule 4 (expr -> TILD expr .)
    RPAREN          reduce using rule 4 (expr -> TILD expr .)
    COLON           reduce using rule 4 (expr -> TILD expr .)

  ! PLUS            [ shift and go to state 26 ]
  ! DASH            [ shift and go to state 27 ]
  ! STAR            [ shift and go to state 28 ]
  ! SLASH           [ shift and go to state 29 ]
  ! PCENT           [ shift and go to state 30 ]
  ! AMP             [ shift and go to state 31 ]
  ! PIPE            [ shift and go to state 32 ]
  ! HAT             [ shift and go to state 33 ]
  ! LTLT            [ shift and go to state 34 ]
  ! GTGT            [ shift and go to state 35 ]


state 38

    (15) expr -> LPAREN expr . RPAREN
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 26
    DASH            shift and go to state 27
    STAR            shift and go to state 28
    SLASH           shift and go to state 29
    PCENT           shift and go to state 30
    AMP             shift and go to state 31
    PIPE            shift and go to state 32
    HAT             shift and go to state 33
    LTLT            shift and go to state 34
    GTGT            shift and go to state 35


state 39

    (18) stmt -> PRINT LPAREN expr RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 52


state 40

    (16) stmt -> VAR IDENT EQ expr COLON . INT SEMICOLON

    INT             shift and go to state 53


state 41

    (5) expr -> expr PLUS expr .
    (5) expr -> expr . PLUS expr
    (6) expr -> expr . DASH expr
    (7) expr -> expr . STAR expr
    (8) expr -> expr . SLASH expr
    (9) expr -> expr . PCENT expr
    (10) expr -> expr . AMP expr
    (11) expr -> expr . PIPE expr
    (12) expr -> expr . HAT expr
    (13) expr -> expr . LTLT expr
    (14) expr -> expr . GTGT expr
